<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shopcart.shopcart.GetStartedActivity"
    android:fitsSystemWindows="true"
    android:background="@drawable/viewpagerimage">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="20sp">


    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_layout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:padding="3dp"
        android:background="@drawable/button_bg"
        android:text="@string/previous"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:padding="3dp"
        android:text="@string/next"
        android:textColor="@color/colorPrimaryDark"
        tools:ignore="RelativeOverlap"
        android:background="@drawable/button_bg" />

    <Button
        android:id="@+id/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/finish"
        android:visibility="invisible" />

</RelativeLayout>
