<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_status"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="Mon , 6 March"
                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintStart_toEndOf="@+id/icon_status"
                app:layout_constraintTop_toTopOf="@+id/icon_status" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_order_items"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:nestedScrollingEnabled="true"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/icon_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_status"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <View
                android:id="@+id/divider5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="24dp"
                android:background="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_status"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_order_items" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/sub_total"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintStart_toEndOf="@+id/icon_status"
                app:layout_constraintTop_toBottomOf="@+id/divider5" />

            <TextView
                android:id="@+id/sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                tools:text="$68"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/total_amount"

                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/order_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                tools:text="$68"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sub_total" />

            <TextView
                android:id="@+id/order_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                tools:text="order delivered"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/green_bg"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/icon_status"
                app:layout_constraintStart_toStartOf="@+id/icon_status" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ripple_white_btns"
            android:elevation="2dp"
            android:text="@string/repeat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/order_track_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/blue"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/order_track_button"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ripple_white_btns"
            android:text="@string/track"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ripple_white_btns"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/order_track_button"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="false"
            android:textColor="@color/red"/>
    </android.support.constraint.ConstraintLayout>


</LinearLayout>